# shallwego

./: .gitignore  README.md  agent_chat.py  agent_graph.py  agent_tools.py  kakao_login.py  main.py  pyproject.toml  shallwego.code-workspace
.cursor/rules/: .cursor.mdc
agent/: agent_chat.py  agent_graph.py  agent_tools.py
app-fastapi/: app-fastapi.Dockerfile  main.py  pyproject.toml  sqlite_checkpointer.sqlite  sqlite_checkpointer.sqlite-shm  sqlite_checkpointer.sqlite-wal
app-fastapi/agent/: agent_graph.py  agent_llm.py  agent_nodes.py  agent_state.py  agent_tools.py
app-fastapi/core/: db_session.py
app-fastapi/crud/: prompt_crud.py
app-fastapi/data/: 100TouristAttractions.csv  vector_store.py  vector_store_data.pkl
app-fastapi/models/: prompt_models.py
app-fastapi/routers/: chat_router.py
app-fastapi/schemas/: calendar_schemas.py  chat_schemas.py  common_schemas.py  event_schemas.py  local_schemas.py  search_schemas.py  task_schemas.py
app-fastapi/tools/: calendar_tools.py  local_tools.py  search_tools.py  tool_helpers.py
app-fastapi/utils/: api_endpoints.py  custom_logger.py  enums.py  filtering.py
app-streamlit/: app-streamlit.Dockerfile  chat.py  main.py  options.py  pyproject.toml  social_login.py
app-streamlit/.streamlit/: config.toml
app-streamlit/dataset/: result_dataset.csv  test_dataset.py  tools_dataset.csv
app-streamlit/page/: chat.py  options.py  social_login.py
app-streamlit/pages/: chat.py  options.py
app-streamlit/schemas/: chat_schemas.py
app-streamlit/utils/: api_endpoints.py  encryption.py
docs/phase1/: feature_spec.md  result.md  sequence_diagram.plantuml  user_story.md
docs/phase2/: agent_graph_mermaid.md  ai_tools.md  architecture.md  feature_spec.md  langchain_graph.md  result.md  self_scoring_prompt.txt  setting.md  system_prompt.txt
oauth/: kakao_login.py
schemas/: calendar_schemas.py  common_schemas.py  event_schemas.py  search_schemas.py
tools/: calendar_tools.py  event_tools.py  search_tools.py  task_tools.py  tool_helpers.py
utils/: api_endpoints.py  enums.py
